Acomodando lo de data werehouse | DB

--- a/5º Año/Ética y Deontología  Profesional/Unidad 1/1. Introduccion Conceptos.md
+++ b/5º Año/Ética y Deontología  Profesional/Unidad 1/1. Introduccion Conceptos.md
@@ -20,7 +20,7 @@ La falta de moral o ética en tu profesión trae consigo muchos problemas, entre
 #### Análisis Ético
 Una situación que implica directa o indirectamente aspectos éticos debe analizarse de la siguiente manera:
 1. **Identifique y describa claramente los hechos.** Indague quien le hizo que a quien y donde, cuando y como en muchos casos le sorprenderá los errores que se comenten en los informes sobre la descripción de los hechos y por lo general basta con aclarar las cosas para definir la solución.
-2. **Defina el conflicto o dilema e identifique los valores de orden superior implicados.** Los aspectos éticos, sociales y políticos siempre tienen que ver con una escala de valores las partes implicadas reclaman algún tipo de valor en la disputa o dilema por ejemplo La Libertad, La Vida, La privacidad, La Protección de Información u otros.
+2. **Defina el conflicto o dilema e identifique los valores de orden superior implicados.** Los aspectos éticos, sociales y políticos siempre tienen que ver con una escala de valores las partes implicadas reclaman algún tipo de valor en la disputa o dilema por ejemplo la libertad, la vida, la privacidad, la protección de información u otros.
 3. **Identifique a los Interesados.** Los aspectos éticos, sociales y políticos tienen interesados actores en el juego cuyo interés son los resultados, que han invertido en la situación y que usualmente defienden su opinión, averiguar cual es la identidad de esos grupos y que desean, esto será útil cuando se diseñe una solución.
 4. **Identifique las opciones razonables que pueda tomar.** Tal vez encuentras un solución que no satisfaga los intereses de los involucrados, pero quizás algunas sean mejor que otras, a veces llegar a una buena solución ética no siempre significa equilibrar las consecuencias para los interesados.
 5. **Identifique la posibles consecuencias de sus opciones.** Debemos preguntarnos ¿Que pasaría si siempre eligiera esta opción? cual seria las consecuencias de decidir esta opción.
