--- a/5º Año/Ética y Deontología  Profesional/Unidad 2/3. Etica y Normas Juridicas.md
+++ b/5º Año/Ética y Deontología  Profesional/Unidad 2/3. Etica y Normas Juridicas.md
@@ -4,7 +4,7 @@ El derecho informático trata la relación existente entre el derecho y la infor
 - **Objetivo u objeto mediático:** La información.
 
 Se considera que no existe una definición formal y universal de delito informático, pero se han formulado conceptos respondiendo a las distintas realidades nacionales concretas.
-La Organización para la Cooperación y Desarrollo Económicos es una organización internacional intergubernamental que tiene sus raíces en 1948 y reúne a los países más industrializados de economía de mercado. Su principal función es armonizar políticas con el objetivo de maximizar el crecimiento económico y coadyuvar el desarrollo de los países miembros y no miembros.
+La Organización para la Cooperación y Desarrollo Económicos es una organización internacional intergubernamental que tiene sus raíces en 1948 y reúne a los países más industrializados de economía de mercado. El principal objetivo de esta organización es armonizar políticas con el objetivo de maximizar el crecimiento económico y contribuir en el desarrollo de los países miembros y no miembros.
 En 1992, la Asociación Internacional de Derecho Penal, adoptó diversas recomendaciones respecto a los delitos informáticos, entre ellas que, en la medida que el Derecho Penal no sea suficiente, deberá promoverse la modificación de la definición de los delitos existentes o la creación de otros nuevos.
 >[!info] Definición de Delito
 >Acción penada por las leyes por realizarse en perjuicio de algo o alguien, o por ser contraria a lo establecido por aquellas.
