--- a/5º Año/Ética y Deontología  Profesional/Unidad 2/6. Proteccion de Datos.md
+++ b/5º Año/Ética y Deontología  Profesional/Unidad 2/6. Proteccion de Datos.md
@@ -123,5 +123,5 @@ Si bien generalmente se lo utiliza con fines comerciales o publicitarios, no son
 La ley 25.326 de Protección de los Datos Personales, sostiene escasos proyectos de ley existentes sobre la materia, que en líneas generales consideran que las comunicaciones comerciales no solicitadas deben ser claramente identificadas como tales e incluir una opción automática de exclusión voluntaria de la lista de destinatarios.
 Aún no existe legislación nacional ni internacional que condene el SPAM. Ni siquiera el famoso y nunca sancionado Decreto S.1618, que los spammers suelen mencionar al pie de sus mensajes de correo electrónico, que no fue más que un proyecto de enmienda para el Acta de Telecomunicaciones estadounidense presentado en el año 1998, pero que nunca fue sancionada.
 ### Medidas contra el SPAM
-Los programas utilizados para filtrar automáticamente dichos mensajes disminuyen los problemas, pero no son totalmente eficientes. Los proveedores de servicios de Internet deben adoptar políticas de "tolerancia cero" respecto a los mensajes spam que envíen sus clientes y exigir el cumplimiento de las condiciones de contratación del servicio. Debe alentarse la aprobación de códigos de conducta que obliguen a las partes involucradas en el negocio a comportarse éticamente.
+Los programas utilizados para filtrar automáticamente dichos mensajes disminuyen los problemas, pero no son totalmente eficientes. Los proveedores de servicios de Internet deben adoptar políticas de tolerancia cero respecto a los mensajes spam que envíen sus clientes y exigir el cumplimiento de las condiciones de contratación del servicio. Debe alentarse la aprobación de códigos de conducta que obliguen a las partes involucradas en el negocio a comportarse éticamente.
 Finalmente, la Ley 25.326 de Protección de Datos Personales es hoy por hoy la herramienta jurídica más importante que los usuarios argentinos de Internet que reciben mensajes de correo electrónico no solicitado tienen a su alcance para protegerse del SPAM.
