--- a/5º Año/Ética y Deontología  Profesional/Unidad 3/2. El Derecho y la Propiedad Intelectual en los Entornos Digitales.md
+++ b/5º Año/Ética y Deontología  Profesional/Unidad 3/2. El Derecho y la Propiedad Intelectual en los Entornos Digitales.md
@@ -8,7 +8,7 @@ Los derechos de propiedad intelectual sobre una obra duran mientras el autor est
 - Impresos, manuscritos, obras de arte, creaciones musicales, películas, programas de radio y televisión, gráficas, mapas, programas de computadoras, bases de datos, páginas en internet, blogs, etc.
 
 Los títulos, ideas, métodos, procesos, resultados experimentales, conclusiones, obras de dominio público y obras producidas por empleados del gobierno federal como parte de sus tareas no son protegidos por los derechos de autor.
-En el caso de los autores, los derechos de autor se establecen automáticamente una vez la obra está plasmada en un medio tangible. En caso de que se quiera iniciar una acción legar o en caso de querer recibir una compensación económica de la obra, la misma si debe estar registrada,
+En el caso de los autores, los derechos de autor se establecen automáticamente una vez la obra está plasmada en un medio tangible. En caso de que se quiera iniciar una acción legal o en caso de querer recibir una compensación económica de la obra, la misma si debe estar registrada,
 >[!tldr] Criterios para Determinar Uso de los Derechos de Autor
 >- Propósito y la naturaleza del uso (comercial vs. no comercial).
 >- Naturaleza de la obra copiada (ficción vs. no ficción, sin fines vs. con fines de lucro, distribución amplia vs. limitada).
