--- a/5º Año/Ética y Deontología  Profesional/Unidad 3/3. Nuevas Tecnologias y Propiedad Intelectual.md
+++ b/5º Año/Ética y Deontología  Profesional/Unidad 3/3. Nuevas Tecnologias y Propiedad Intelectual.md
@@ -59,4 +59,4 @@ Quien registra su obra de software accede a determinados beneficios:
 - **Prueba de Auditoría**: Es una presunción de autoría que otorga el Estado, con una fecha cierta de inscripción.
 - **Elemento de Comparación**: El registro en la Dirección Nacional de Derechos de Autor sirve de elemento de comparación en supuestos de plagio y piratería. En esos supuestos, la obra es remitida al Poder Judicial para su valoración.
 - **Protección del Usuario de Buena Fe**: Se presume autor de la obra el que figura como tal en el certificado de registro, salvo prueba en contrario. El autor que publicara la obra conforme a las constancias que obran en la Dirección Nacional de Derechos de Autor, quedaría eximido de responsabilidad penal, en el supuesto de que se presente el verdadero autor reclamando sus derechos.
-- **Publicidad de las Obras y Contratos Registrados**: Función primordial de un registro es dar a conocer su contenido. La información beneficia a todo aquel que tiene interés en oponer su derecho frente a terceros y a quienes buscan cerciorarse sobre la viabilidad y legitimidad en una contratación. Tratándose de una obra inédita publicada, ante cualquier duda, extravío o conflicto, siempre existe la posibilidad de requerir la apertura de sobre y obtener el contenido certificado por la Dirección Nacional del Derecho de Autor.
+- **Publicidad de las Obras y Contratos Registrados**: La función primordial de un registro es dar a conocer su contenido. La información beneficia a todo aquel que tiene interés en oponer su derecho frente a terceros y a quienes buscan cerciorarse sobre la viabilidad y legitimidad en una contratación. Tratándose de una obra inédita publicada, ante cualquier duda, extravío o conflicto, siempre existe la posibilidad de requerir la apertura de sobre y obtener el contenido certificado por la Dirección Nacional del Derecho de Autor.
