--- a/4º Año/Bases de Datos/Unidad 13/1. Almacenes de Datos.md
+++ b/4º Año/Bases de Datos/Unidad 13/1. Almacenes de Datos.md
@@ -1,4 +1,4 @@
-La ***inteligencia de negocios*** es una arquitectura y un conjunto integrado de aplicaciones operacionales, aplicaciones de soporte de decisiones y bases de datos que proveen fácil acceso a los datos del negocio. Se refiere principalmente a técnicas computacionales utilizadas en la identificación, extracción y análisis de datos de negocios, tales como ingresos por ventas, por productos y/o departamentos, o por asociación de ingresos y costos, entre otros.
+La ***inteligencia de negocios*** es una arquitectura y un conjunto integrado de aplicaciones operacionales, de soporte de decisiones y bases de datos que proveen fácil acceso a los datos del negocio. Se refiere principalmente a técnicas computacionales utilizadas en la identificación, extracción y análisis de datos de negocios, tales como ingresos por ventas, por productos y/o departamentos, o por asociación de ingresos y costos, entre otros.
 Un ***proceso de decisión*** se puede entender como un proceso que implica elegir entre varias alternativas y cursos de acción, con el propósito de alcanzar una o varios objetivos definidos, es decir, no solo implica resolver problemas, sino también investigar oportunidades de negocio. Los proceso de decisiones se pueden dividir en tres categorías:
 - **Procesos de decisiones estructurados**: Todas las fases son estructuradas, es decir, se conocen los procedimientos para obtener la mejor solución.
 - **Procesos de decisiones semiestructurados**: Tiene alguna de las partes o fases estructuradas, en este tipo de procesos se combinan procedimientos estandarizados con el juicio humano.
@@ -10,7 +10,7 @@ Los almacenes de datos (Data Werehouse) son esquemas separados en las bases de d
 >[!tldr] Diferencias entre OLTP y OLAP
 >**OLTP** (Procesamiento de Transacciones en Línea) se enfoca en manejar datos actuales y está optimizado para transacciones rutinarias y frecuentes. Su principal objetivo es gestionar las operaciones diarias de **CRUD**. Estas transacciones son predecibles y repetibles, lo que permite un uso eficiente por parte de un gran número de usuarios simultáneamente. El acceso a los datos es rápido y normalmente los datos provienen de una única fuente. OLTP proporciona un nivel de detalle alto, adecuado para las operaciones cotidianas de la empresa.
 >Por otro lado, **OLAP** (Procesamiento Analítico en Línea) se utiliza principalmente para el análisis de datos históricos, derivados y resumidos. Está optimizado para consultas complejas que requieren la recuperación de grandes volúmenes de información. El acceso a los datos es mayormente de lectura, y su uso es menos frecuente y más aleatorio o ad hoc, con un enfoque heurístico. El nivel de detalle es apropiado para la toma de decisiones, y los tiempos de respuesta pueden variar desde segundos hasta minutos. A diferencia de OLTP, OLAP tiene un número más limitado de usuarios y recopila datos de diversas fuentes, lo que permite un análisis más integral.
-## Data Werehouse
+## Almacenes de Datos (Data Werehouse)
 Entonces podemos definir a los almacenes de datos como una base de datos que va a dar soporte a todos los proceso de decisiones de la organización. Por esta misma razón los almacenes de datos poseen las siguientes características:
 - **Orientada a temas**: Los almacenes de datos están diseñados para facilitar el análisis de la información. Por ejemplo, se puede crear un almacén enfocado en las ventas de la empresa para obtener detalles específicos, qué clientes compran ciertos productos. Esta capacidad de estructurar el almacén de datos por temas, como las ventas, lo convierte en un sistema orientado al tema.
 - **Integridad de datos**: La integración está directamente relacionada con la orientación temática de los almacenes de datos. Estos deben unificar datos de diversas fuentes en un formato coherente, resolviendo problemas como los conflictos de nombres y las inconsistencias en las unidades de medida. Cuando logran esto, se consideran ***integrados***.
@@ -18,31 +18,39 @@ Entonces podemos definir a los almacenes de datos como una base de datos que va 
 - **Tiempo variable**: Los almacenes de datos almacenan datos históricos. La información en estos almacenes posee su propio sello de tiempo, lo que permite analizar el pasado, relacionarla con el presente y realizar previsiones para el futuro.
 - **Datos no volátiles**: La no volatilidad en un almacén de datos significa que, una vez que los datos se introducen, no deben modificarse. Esto es coherente con su objetivo de permitir el análisis de eventos pasados. Las únicas operaciones que se puede realizar sobre un almacén de datos son la carga y consultas de datos.
 
-Para comenzar a poblar con información un almacén de datos se debe realizar un proceso de ***extracción, transformación y carga (ETL)***, este paso es muy importante porque de esta forma automatizamos la carga de datos de forma periódica al almacén de datos. Este proceso es realizado en por lote, no en tiempo real.
+Para comenzar a poblar con información un almacén de datos se debe realizar un proceso de ***extracción, transformación y carga (ETL)***, este paso es muy importante porque de esta forma automatizamos la carga de datos de forma periódica al almacén de datos, asegurando a su vez la consistencia e integridad de los datos cargados al almacén. Este proceso es realizado en por lote, no en tiempo real.
 ![[esquema-etl.png]]
 
 Los periodos de carga pueden variar de acuerdo a las necesidades, pero en la mayoría de los casos los periodos son superior al día, pueden existir ocasiones en la que se requiera periodos de tiempo más cortos en dicho caso solo cambia la configuración.
-### Data Mart
-Un **Data Mart (DM)** es una versión limitada de un almacén de datos, diseñada para atender las necesidades específicas de un área funcional, un problema particular, un departamento, o un grupo de usuarios dentro de una organización. Los **Data Marts** permiten un acceso más rápido y eficiente a los datos relevantes para un propósito específico, lo que facilita el análisis y la toma de decisiones a nivel departamental.
+### Mercados de datos (Data Mart)
+Un **Data Mart (DM)** es una versión limitada de un almacén de datos, diseñada para atender las necesidades específicas de un área funcional, un problema particular, un departamento, o un grupo de usuarios dentro de una organización. Los mercados de datos permiten un acceso más rápido y eficiente a los datos relevantes para un propósito específico, lo que facilita el análisis y la toma de decisiones a nivel departamental.
 Existen dos paradigmas principales en cuanto a la relación entre **Data Warehouses** y **Data Marts**:
-- **Paradigma Top-down (Bill Inmon)**: Este enfoque plantea que se debe construir primero un Data Warehouse centralizado y, posteriormente, crear Data Marts derivados para áreas específicas. El Data Warehouse es el núcleo que garantiza la consistencia de los datos, y los Data Marts actúan como subgrupos especializados.
-- **Paradigma Bottom-up (Ralph Kimball)**: En este enfoque, los Data Marts se desarrollan primero para áreas funcionales específicas, y luego se integran para formar un Data Warehouse completo. Cada Data Mart se construye pensando en un tema particular, y la integración de los mismos da lugar a una solución unificada y global de almacenamiento de datos.
+- **Paradigma Top-down (Bill Inmon)**: Este enfoque plantea que se debe construir primero un almacén de datos centralizado y, posteriormente, crear los distintos mercados de datos derivados para cada área específica. El almacén de datos es el núcleo que garantiza la consistencia de los datos, mientras que los mercados de datos actúan como subgrupos especializados.
+- **Paradigma Bottom-up (Ralph Kimball)**: En este enfoque, los mercados de datos se desarrollan primero para cada área funcional específica, y luego se integran para formar un almacén de datos completo. Cada mercados de datos se construye pensando en un tema particular, y la integración de los mismos da lugar a una solución unificada y global de almacenamiento de datos.
+
+>[!note] Utilidad y Practicidad del Paradigma Bottom-Up
+>En situaciones reales se suele optar, en la mayoría de los casos, por paradigma bottom-up, ya que permite obtener resultados tangibles de manera más rápida. Esto se debe a que el tiempo y esfuerzos necesarios para realizar el modelado e implementación del mismo es más sencilla, dado que no es necesario adaptarse a los modelos de un almacén de datos ya existente.
+>Este enfoque permite crear nuevos data marts bajo demanda de los distintos departamentos para una posterior integración total con un almacén de datos, requiriendo una menor inversión inicial y ofreciendo una mayor flexibilidad para realizar cambios durante el desarrollo.
 
 Ambos paradigmas tienen sus ventajas y desventajas, dependiendo de las necesidades y estructura de la organización. El enfoque **Top-down** asegura mayor consistencia de los datos a nivel global, mientras que el **Bottom-up** permite una implementación más rápida en áreas específicas antes de integrar los datos a nivel organizacional.
 ## Modelo Dimensional
-El ***modelo dimensional*** es un esquema de datos, que contiene la misma información que el modelo entidad-relación, utilizado en almacenes de datos, con la principal diferencia que la información se almacena de manera simétrica, con el objetivo de mejorar la comprensión del usuario, optimizar la performance en consultas y brindar flexibilidad ante posibles cambios. Este tipo de esquemas poseen dos elementos fundamentales los cuales son:
+El ***modelo dimensional*** es un esquema de datos, que contiene la misma información que el modelo entidad-relación, utilizado en almacenes de datos, con la principal diferencia que la información se almacena de manera simétrica, con el objetivo de mejorar la comprensión del usuario, optimizar la performance en consultas y brindar flexibilidad ante posibles cambios. Este tipo de esquemas poseen tres elementos fundamentales los cuales son:
 - **Atributos**: Describen características de algo tangible, como podría ser la fecha de nacimiento o la marca. Los atributos se organizan o agrupan en dimensiones.
-- **Hechos (Facts)**: Es la entidad u objeto que se desea observar, como podrían ser un producto o una venta. Los hechos pueden ser numéricos o textos, los hechos numéricos pueden ser categorizados en:
+- **Hechos (Facts)**: Representa a la entidad u objeto que se desea observar, como podrían ser un producto o una venta. Los hechos pueden ser numéricos o textos, los hechos numéricos pueden ser categorizados en:
 	- **Hechos aditivos**: Se pueden sumar en todas las dimensiones.
 	- **Hechos semi-aditivos**: Se pueden sumar en todas las dimensiones excepto en la dimensión de tiempo, esto se debe a que en la dimensión de tiempo se suma y se divide por el número de periodos de tiempo.
 	- **Hechos no aditivos**: Son medidas de intensidad no aditivas en todas las dimensiones, son el resultado de las funciones de agregación como `AVG`.
+- **Dimensiones**: Brindan mayor contexto o perspectiva a los diferentes hechos asociados a las mismas.
 
->[!tldr] Tipos de Modelos Dimensionales
->Existen dos modelos dimensionales principales:
->
->- **Esquema en Estrella**: Es un modelo de datos en el que una tabla central, llamada **tabla de hechos (fact table)**, almacena los datos que se desean analizar, mientras que está rodeada por tablas de dimensiones que proporcionan contexto para esos datos. Este modelo es simple, fácil de entender, y está optimizado para consultas rápidas.
->- **Esquema en Copo de Nieve**: Es una versión más compleja del esquema en estrella, en la que las tablas de dimensiones se organizan en jerarquías, creando una estructura más detallada y normalizada. Este enfoque busca reducir la redundancia de datos, aunque a costa de una mayor complejidad en las consultas. Es útil cuando las dimensiones tienen subniveles que requieren una mayor precisión en el análisis.
-> 
->Ambos esquemas se utilizan en almacenes de datos para facilitar el análisis y las consultas de grandes volúmenes de información, adaptándose según las necesidades de rendimiento y flexibilidad.
-
+El principal propósito de las tablas de dimensiones es proveer mayor contexto o brindar cierta perspectiva sobre los hechos que se están analizando, por ejemplo, si se está analizando las ventas, las mismas se pueden ser categorizar por cliente, producto e incluso tiempo. Como se puede observar estas tres dimensiones mencionadas en el ejemplo nos brindan un mayor contexto a la hora de interpretar los datos.
 Generalmente, las tablas dimensionales están compuestas por atributos y es bastante común que posean una sola clave primaria. Mientras que las tablas de hechos suelen caracterizarse por tener muchas claves foráneas y en ciertos casos atributos propios.
+### Esquemas para el Modelo Dimensional
+Existen dos modelos dimensionales principales:
+- **Esquema en Estrella**: Es un modelo de datos en el que una tabla central, llamada **tabla de hechos (fact table)**, almacena los datos que se desean analizar, mientras que está rodeada por tablas de dimensiones que proporcionan contexto para esos datos. Este modelo es simple, fácil de entender, y está optimizado para consultas rápidas.
+- **Esquema en Copo de Nieve**: Es una versión más compleja del esquema en estrella, en la que las tablas de dimensiones se organizan en jerarquías, creando una estructura más detallada y normalizada. Este enfoque busca reducir la redundancia de datos, aunque a costa de una mayor complejidad en las consultas. Es útil cuando las dimensiones tienen subniveles que requieren una mayor precisión en el análisis.
+
+Ambos esquemas se utilizan en almacenes de datos para facilitar el análisis y las consultas de grandes volúmenes de información, adaptándose según las necesidades de rendimiento y flexibilidad.
+>[!tldr] Drill-Down y Roll-Up
+>Al momento de analizar los datos existen dos técnicas que nos permiten brindar mayor o menor grado de detalle a la información que se encuentra en un almacén de datos, estas técnicas son las siguientes:
+>- **Drill-Down**: Este tipo de técnicas permite a partir de datos más generales llegar a datos muchos más específicos, es decir, esta técnica profundiza el nivel de detalles en los datos.
+>- **Roll-Up**: Permite transformar datos mucho más específicos en datos más generales, es decir, encampsula la información y la abstrae para proveer una visión más general de estos mismos.
