--- a/4º Año/Calculo Numerico/Unidad 4/1. Interpolacion y Regresion.md
+++ b/4º Año/Calculo Numerico/Unidad 4/1. Interpolacion y Regresion.md
@@ -48,11 +48,10 @@ y_n
 
 El grado de los polinomios va a depender del tipo de regresión que deseemos realizar. La forma de resolver esta matriz, teniendo en cuenta que es un sistema del tipo $A\cdot X = B$ consta de los siguientes pasos:
 1. Se multiplica por la transpuesta de $A$ a ambos lados de la igualdad:
-
 $$A^t \cdot A \cdot X = A^t \cdot B$$
 2. Se resuelve la multiplicación de $A^t \cdot A$, lo que nos deja con una matriz cuadrada.
 3. Se resuelve la multiplicación de $A^t \cdot B$ para obtener el nuevo resultado.
-4. Una vez teniendo que se convierte la matriz del lado derecho en cuadrada se resuelve el sistema de ecuaciones de manera normal. Supongamos que $A^t \cdot A = H$ (sabiendo que $H$ es una matriz cuadrada) y que $A^t \cdot B = Y$ es un resultado intermedio, entonces se resuelve la siguiente matriz con el método que resulta más conveniente:
+4. Como la matriz del lado derecho en cuadrada se resuelve el sistema de ecuaciones de manera normal. Supongamos que $A^t \cdot A = H$ (sabiendo que $H$ es una matriz cuadrada) y que $A^t \cdot B = Y$ es un resultado intermedio, entonces se resuelve la siguiente matriz con el método que resulta más conveniente:
 $$H \cdot X = Y$$
 Donde el resultado de resolver ese sistema de ecuaciones va a ser un vector $X$ cuyas componentes son los coeficientes de la función de regresión.
 >[!tldr] Criterios para la Aplicación de la Regresión
